[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "msg3j"
version = "0.0.1"
authors = [
  { name="echoRedOx", email="echodevs@proton.me" },
]
description = "Managing message and conversation types for yaml conversion and contextual recall."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]
